--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=K2D:wght@500&display=swap");
 body {
   background-color: rgb(15, 23, 46);
   overflow-x: hidden;
+  font-family: "K2D", sans-serif;
 }
 
 body::-webkit-scrollbar {
@@ -30,7 +32,9 @@ body::-webkit-scrollbar {
 }
 
 .bg-glass {
-  backdrop-filter: blur(40px);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+
   box-shadow: 0 0 9px skyblue;
 }
 
