--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
   z-index: -1;
 }
 
@@ -40,7 +41,13 @@ body::-webkit-scrollbar {
 .bg-glass-high {
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
+}
+
+.nav-blue {
   box-shadow: 0 0 9px #00d8fa;
+}
+.nav-purple {
+  box-shadow: 0 0 9px #905fa8;
 }
 
 .bg-glass-purple {
@@ -59,35 +66,6 @@ body::-webkit-scrollbar {
 
 .link {
   box-shadow: 0 0 14px #00d8fa;
-}
-
-.vi {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-}
-
-.iframe {
-  width: 100%;
-  height: 0px;
-  position: absolute;
-  z-index: -1;
-  padding-bottom: 56.25%;
-}
-
-.iIN {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-  left: 0px;
-  top: 0px;
 }
 
 .bg-royal {
