--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,26 +8,12 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
-.framer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  overflow: hidden;
-}
-.framer2 {
-  width: 100%;
-  height: 0px;
-  position: relative;
-  padding-bottom: 64.748%;
-}
+
 .bg-vid {
-  background: url("../assets/videos/bg.gif") no-repeat center center fixed;
+  background: url("/bg.gif") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
   width: 100%;
   z-index: -1;
 }
